trunk/OldArchive/100465c00354c9e168e7ee01c37e78f0-7063104e283ed82d51a6fde7370c6e59/output
main.cpp:3:3: error: 'abc' does not name a type
   abc
   ^
